// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card determineWarning should display a warning on cards if there is no user 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    film={
        Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          }
    }
    handleFavorite={[Function]}
    user={Object {}}
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="favorite-img"
          id={20}
          onClick={[Function]}
/>,
        <img
          alt="movie-poster"
          className="poster"
          src="https://image.tmdb.org/t/p/w500url"
/>,
        <div />,
        <div
          className="information"
>
          <h2>
                    Planet Earth
          </h2>
          <h3>
                    March 5, 2006
          </h3>
          <p>
                    Best documentary ever
          </p>
</div>,
      ],
      "className": "Card",
      "id": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "favorite-img",
          "id": 20,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "movie-poster",
          "className": "poster",
          "src": "https://image.tmdb.org/t/p/w500url",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              Planet Earth
</h2>,
            <h3>
              March 5, 2006
</h3>,
            <p>
              Best documentary ever
</p>,
          ],
          "className": "information",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Planet Earth",
            },
            "ref": null,
            "rendered": "Planet Earth",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "March 5, 2006",
            },
            "ref": null,
            "rendered": "March 5, 2006",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Best documentary ever",
            },
            "ref": null,
            "rendered": "Best documentary ever",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="favorite-img"
            id={20}
            onClick={[Function]}
/>,
          <img
            alt="movie-poster"
            className="poster"
            src="https://image.tmdb.org/t/p/w500url"
/>,
          <div />,
          <div
            className="information"
>
            <h2>
                        Planet Earth
            </h2>
            <h3>
                        March 5, 2006
            </h3>
            <p>
                        Best documentary ever
            </p>
</div>,
        ],
        "className": "Card",
        "id": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "favorite-img",
            "id": 20,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "movie-poster",
            "className": "poster",
            "src": "https://image.tmdb.org/t/p/w500url",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                Planet Earth
</h2>,
              <h3>
                March 5, 2006
</h3>,
              <p>
                Best documentary ever
</p>,
            ],
            "className": "information",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Planet Earth",
              },
              "ref": null,
              "rendered": "Planet Earth",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "March 5, 2006",
              },
              "ref": null,
              "rendered": "March 5, 2006",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Best documentary ever",
              },
              "ref": null,
              "rendered": "Best documentary ever",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;

exports[`Card should match the snapshot 1`] = `
ShallowWrapper {
  "length": 1,
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <Card
    film={
        Object {
            "backdrop": "url",
            "movie_id": 20,
            "overview": "Best documentary ever",
            "poster_path": "url",
            "release_date": "March 5, 2006",
            "title": "Planet Earth",
            "vote_average": "1000%",
          }
    }
    handleFavorite={[Function]}
    user={
        Object {
            "email": "tink@gmail.com",
            "name": "TinkerBell",
            "password": "password",
          }
    }
/>,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "host",
    "props": Object {
      "children": Array [
        <button
          className="favorite-img"
          id={20}
          onClick={[Function]}
/>,
        <img
          alt="movie-poster"
          className="poster"
          src="https://image.tmdb.org/t/p/w500url"
/>,
        <div />,
        <div
          className="information"
>
          <h2>
                    Planet Earth
          </h2>
          <h3>
                    March 5, 2006
          </h3>
          <p>
                    Best documentary ever
          </p>
</div>,
      ],
      "className": "Card",
      "id": undefined,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "className": "favorite-img",
          "id": 20,
          "onClick": [Function],
        },
        "ref": null,
        "rendered": null,
        "type": "button",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "alt": "movie-poster",
          "className": "poster",
          "src": "https://image.tmdb.org/t/p/w500url",
        },
        "ref": null,
        "rendered": null,
        "type": "img",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {},
        "ref": null,
        "rendered": null,
        "type": "div",
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "host",
        "props": Object {
          "children": Array [
            <h2>
              Planet Earth
</h2>,
            <h3>
              March 5, 2006
</h3>,
            <p>
              Best documentary ever
</p>,
          ],
          "className": "information",
        },
        "ref": null,
        "rendered": Array [
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Planet Earth",
            },
            "ref": null,
            "rendered": "Planet Earth",
            "type": "h2",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "March 5, 2006",
            },
            "ref": null,
            "rendered": "March 5, 2006",
            "type": "h3",
          },
          Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": "Best documentary ever",
            },
            "ref": null,
            "rendered": "Best documentary ever",
            "type": "p",
          },
        ],
        "type": "div",
      },
    ],
    "type": "article",
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "host",
      "props": Object {
        "children": Array [
          <button
            className="favorite-img"
            id={20}
            onClick={[Function]}
/>,
          <img
            alt="movie-poster"
            className="poster"
            src="https://image.tmdb.org/t/p/w500url"
/>,
          <div />,
          <div
            className="information"
>
            <h2>
                        Planet Earth
            </h2>
            <h3>
                        March 5, 2006
            </h3>
            <p>
                        Best documentary ever
            </p>
</div>,
        ],
        "className": "Card",
        "id": undefined,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "className": "favorite-img",
            "id": 20,
            "onClick": [Function],
          },
          "ref": null,
          "rendered": null,
          "type": "button",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "alt": "movie-poster",
            "className": "poster",
            "src": "https://image.tmdb.org/t/p/w500url",
          },
          "ref": null,
          "rendered": null,
          "type": "img",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {},
          "ref": null,
          "rendered": null,
          "type": "div",
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <h2>
                Planet Earth
</h2>,
              <h3>
                March 5, 2006
</h3>,
              <p>
                Best documentary ever
</p>,
            ],
            "className": "information",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Planet Earth",
              },
              "ref": null,
              "rendered": "Planet Earth",
              "type": "h2",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "March 5, 2006",
              },
              "ref": null,
              "rendered": "March 5, 2006",
              "type": "h3",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "Best documentary ever",
              },
              "ref": null,
              "rendered": "Best documentary ever",
              "type": "p",
            },
          ],
          "type": "div",
        },
      ],
      "type": "article",
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
      },
    },
  },
}
`;
